--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Library</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
     <h1>Library</h1>
     <p>This is a Library</p>
+    <main></main>
+    <button>New Book!</button>
 </body>
 </html>
