--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <title>Library</title>
     <script src="index.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Library</h1>
-    <p>This is a Library</p>
+    <header>
+        <h1>My Library</h1>
+    </header>
+    <button>Add Book</button>
     <main></main>
-    <button>New Book!</button>
+    <div class="bookshelf"></div>
 </body>
 </html>
