--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <header>
+        <img class="headimg" src="images/2-removebg.png" alt="">
         <h1>My Library</h1>
     </header>
     <button>Add Book</button>
