--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h1>My Library</h1>
     </header>
     <button>Add Book</button>
+    <div class="overlay"></div>
     <main></main>
     <div class="bookshelf"></div>
 </body>
