handle cancel and event listners

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="headimg" src="images/2-removebg.png" alt="">
         <h1>My Library</h1>
     </header>
-    <button>Add Book</button>
+    <button class="addBook">Add Book</button>
     <div class="overlay"></div>
     <main></main>
     <div class="bookshelf"></div>
